# rust-self-tokenize

./: Cargo.toml  README.md
self-tokenize-derive/: Cargo.toml
self-tokenize-derive/src/: lib.rs  util.rs
self-tokenize-derive/tests/: spec.rs
self-tokenize-trait/: Cargo.toml
self-tokenize-trait/src/: lib.rs
