[package]
name = "self-tokenize-macro"
version = "0.1.0"
authors = ["Victor Porof <victor.porof@gmail.com>"]

[lib]
name = "self_tokenize_macro"
proc-macro = true

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[dev-dependencies]
num-traits = { version = "0.1", default_features = false }
ordered-float = "0.5.0"
self-tokenize-trait = { path = "../self-tokenize-trait" }
smallvec = "0.6.0"
